--- a/ml/environment_ml.yml
+++ b/ml/environment_ml.yml
@@ -1,1 +1,20 @@
 name: psagot-2020-ml
+dependencies:
+  - python=3.8
+  - numpy
+  - pandas
+  - matplotlib
+  - seaborn
+  - scikit-learn
+  - graphviz
+  - networkx
+  - holoviews
+  - autopep8
+  - notebook
+  - ipython
+  - jupyter
+  - jupyterlab
+  - pip
+  - pip:
+      - pydotplus
+      - tqdm
